fix: move overflow-x to html instead of body to prevent layout break

--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -23,6 +23,9 @@ body{
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
+}
+
+html {
   overflow-x: hidden;
 }
 
